@@ -165,7 +165,7 @@ int main(int argc, char *argv[])
 				printf(
 					"Usage: asap2wav [OPTIONS] INPUTFILE...\n"
 					"Each INPUTFILE must be in a supported format:\n"
-					"SAP, CMC, CMR, DMC, MPT, MPD or TMC.\n"
+					"SAP, CMC, CMR, DMC, MPT, MPD, RMT or TMC.\n"
 					"Options:\n"
 					"-o FILE     --output=FILE      Set output WAV file name\n"
 					"-s SONG     --song=SONG        Select subsong number (zero-based)\n"
