@@ -222,6 +222,7 @@ static In_Module mod = {
 	"dmc\0DoublePlay Chaos Music Composer (*.DMC)\0"
 	"mpt\0Music ProTracker (*.MPT)\0"
 	"mpd\0Music ProTracker DoublePlay (*.MPD)\0"
+	"rmt\0Raster Music Tracker (*.RMT)\0"
 	"tmc\0Theta Music Composer (*.TMC)\0",
 	0,    // is_seekable
 	1,    // UsesOutputPlug
